# sparsehub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: regression.cmake  run_test.cmake
examples/: input.inp
src/: CMakeLists.txt  array_ref.hpp  config.hpp.in  crs.hpp  main.cpp  sparse_layout.hpp
